change heanding and added  margin

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>The is already some file</h1>
+    <h1>lorem</h1>
 </body>
 </html>
